# spike-doctor

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  SpikeDoctor.spec  app.py  devenv.nix  docker-compose.yml  flake.nix  pyinstaller_entry.py  pyproject.toml  requirements.txt  spike-doctor.py
.github/workflows/: release.yml
modules/: analysis.py  constants.py  helper.py  plotting.py
