[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spike-doctor"
version = "0.7.1"
description = "Shiny web application for analyzing whole-cell current clamp recordings"
requires-python = ">=3.12"
dependencies = [
    "numpy==2.3.5",
    "pandas",
    "matplotlib",
    "shiny",
    "openpyxl",
    "pyabf",
    "efel",
    "quantities==0.15",
]

[dependency-groups]
dev = ["pyinstaller"]

[tool.setuptools]
py-modules = []

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
